[package]
name = "uuid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive", "env", "string"] }
uuid = { version = "1.6.1", features = ["v4", "v1", "v3", "v5", "v6", "v7", "v8"] }
